#0000 - after recent changes server started to throw OutOfMemory exception, MaxPerm variety. This means we are loading way too many classes into the memory, for now altered the gradle run target to allow testing of client. Also added dump, so if it happens its easy to analyse what the memory is like at crash.